Tis file documents the revision history for Perl extension Catalyst.

5.50
        - Restarter process in HTTP engine now properly exits when the
          parent app is shut down.  
        - Improved performance of restarter loop while watching for
          changed files.
        - Restarter will now detect new files added to an app on systems
          that change directory mtimes when new files are created.
        - Restarter now properly handles modules that are deleted from an
          application.
        - Fixed memory leak in TestApp.

5.49_02 2005-10-26 12:39:00 
        - Whole new dispatcher!
        - Added index action
        - Added path_to method
        - Added support for passing an IO::Handle object to $c->res->body.
          (Andrew Bramble)
        - Added a new welcome screen.
        - Included Catalyst buttons and icons in helper.
        - Added Static::Simple plugin to core.
        - Added self restarting test server
        - Added filename to debug output for uploaded files.
        - Fixed forwarding with embedded arguments.
        - Fixed handling of escaped query strings.
        - Added upload parameters back into $c->req->params.
        - Added multiple paths support to dispatcher
        - Fixed bug in req->path where changing the path added a trailing
          slash.
        - Removed req->handle and res->handle
        - Added prepare_body_chunk method as a hook for upload progress.
        - Fixed bug in uri_for method when base has no path.
        - Added automated tests for HTTP, CGI, and FastCGI servers.

5.49_01 2005-10-10 10:15:00 
        - Refactored all internals, should be 99% compatible to previous
          versions.
        - *IMPORTANT* The Apache engines have been moved to a separate package
          for this release.  Please install Catalyst::Engine::Apache if you
          need Apache support.

        - Added support for calling forward with arguments in the path, i.e.